fix: read meta files if cache.properties does not exist (#6282)